# kirkland

./: .gitignore
temsim/: .gitignore  CMakeLists.txt  autoslic_config.txt  image_config.txt  kirkland.py  makefile.ubuntu  simulate_image.sh
temsim/CMakeModules/: FindFFTW.cmake
